[project]
description = "A starter template for marimo notebooks with pixi"
name = "marimo-template"
requires-python = ">=3.10"
version = "0.1.0"

[tool.pixi.project]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
marimo-template = { path = ".", editable = true }

[tool.pixi.dependencies]
pre-commit = ">=4.1.0,<5"
pre-commit-hooks = ">=5,<6"
pytest = ">=8.3.4,<9"
ruff = ">=0.12,<0.13"
marimo = ">=0.14,<0.15"

[tool.pixi.tasks]
edit = "marimo edit src/app.py"
test = "pytest"
lint = "ruff check src"
format = "ruff format src"
pre-commit-install = "pre-commit install"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "marimo_template"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
]

[tool.marimo.ai]
rules = "- prefer polars over pandas\n- make charts using altair"

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000
format_on_save = true

[tool.marimo.package_management]
manager = "pixi"
